--- a/INFORME_Y_NOTEBOOK/INFORME_YDATA/ydata_informe.ipynb
+++ b/INFORME_Y_NOTEBOOK/INFORME_YDATA/ydata_informe.ipynb
@@ -176,8 +176,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "acfeb512",
+   "metadata": {},
+   "source": [
+    "## **Generador de reportes**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "484ffec3",
    "metadata": {},
    "outputs": [
@@ -193,18 +201,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<?, ?it/s]/14 [00:00<00:00, 59.00it/s, Describe variable: ops BT]   \n",
-      "Summarize dataset:  69%|██████▉   | 11/16 [00:00<00:00, 59.00it/s, Calculate auto correlation]c:\\Users\\Luis\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ydata_profiling\\model\\correlations.py:87: UserWarning: There was an attempt to calculate the auto correlation, but this failed.\n",
+      "100%|██████████| 9/9 [00:00<?, ?it/s]/14 [00:00<00:00, 80.71it/s, Describe variable: ops BT]   \n",
+      "Summarize dataset:  69%|██████▉   | 11/16 [00:00<00:00, 80.71it/s, Calculate auto correlation]c:\\Users\\Luis\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ydata_profiling\\model\\correlations.py:87: UserWarning: There was an attempt to calculate the auto correlation, but this failed.\n",
       "To hide this warning, disable the calculation\n",
       "(using `df.profile_report(correlations={\"auto\": {\"calculate\": False}})`\n",
       "If this is problematic for your use case, please report this as an issue:\n",
       "https://github.com/ydataai/ydata-profiling/issues\n",
       "(include the error message: 'putmask: first argument must be an array')\n",
       "  warnings.warn(\n",
-      "Summarize dataset: 100%|██████████| 100/100 [00:11<00:00,  8.91it/s, Completed]                 \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:02<00:00,  2.71s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  1.48it/s]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 124.45it/s]\n"
+      "Summarize dataset: 100%|██████████| 100/100 [00:11<00:00,  8.96it/s, Completed]                 \n",
+      "Generate report structure: 100%|██████████| 1/1 [00:02<00:00,  2.76s/it]\n",
+      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  1.58it/s]\n",
+      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 129.85it/s]\n"
      ]
     },
     {
@@ -220,11 +228,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 5/5 [00:00<?, ?it/s]/10 [00:00<00:00, 81.98it/s, Describe variable: tiempo BT]\n",
-      "Summarize dataset: 100%|██████████| 39/39 [00:03<00:00, 11.47it/s, Completed]                   \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:01<00:00,  1.65s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  3.74it/s]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 156.97it/s]"
+      "100%|██████████| 9/9 [00:00<?, ?it/s]/14 [00:00<00:00, 78.66it/s, Describe variable: ops BT]   \n",
+      "Summarize dataset: 100%|██████████| 99/99 [00:09<00:00, 10.01it/s, Completed]                   \n",
+      "Generate report structure: 100%|██████████| 1/1 [00:02<00:00,  2.66s/it]\n",
+      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  1.60it/s]\n",
+      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 130.04it/s]"
      ]
     },
     {
