--- a/INFORME_Y_NOTEBOOK/INFORME_YDATA/ydata_informe.ipynb
+++ b/INFORME_Y_NOTEBOOK/INFORME_YDATA/ydata_informe.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "1f284fd5",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "id": "ad7c52bc",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "id": "9f90c6b3",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 37,
    "id": "e0e08b88",
    "metadata": {},
    "outputs": [
@@ -80,8 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: ydata-profiling==4.16.1 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (4.16.1)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
+      "Requirement already satisfied: ydata-profiling==4.16.1 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (4.16.1)\n",
       "Requirement already satisfied: scipy<1.16,>=1.4.1 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ydata-profiling==4.16.1) (1.14.1)\n",
       "Requirement already satisfied: pandas!=1.4.0,<3.0,>1.1 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ydata-profiling==4.16.1) (2.1.4)\n",
       "Requirement already satisfied: matplotlib<=3.10,>=3.5 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from ydata-profiling==4.16.1) (3.9.2)\n",
@@ -129,7 +128,8 @@
       "Requirement already satisfied: attrs>=19.3.0 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from visions<0.8.2,>=0.7.5->visions[type_image_path]<0.8.2,>=0.7.5->ydata-profiling==4.16.1) (24.2.0)\n",
       "Requirement already satisfied: networkx>=2.4 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from visions<0.8.2,>=0.7.5->visions[type_image_path]<0.8.2,>=0.7.5->ydata-profiling==4.16.1) (3.5)\n",
       "Requirement already satisfied: puremagic in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from visions<0.8.2,>=0.7.5->visions[type_image_path]<0.8.2,>=0.7.5->ydata-profiling==4.16.1) (1.30)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.7->matplotlib<=3.10,>=3.5->ydata-profiling==4.16.1) (1.16.0)\n"
+      "Requirement already satisfied: six>=1.5 in c:\\users\\luis\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.7->matplotlib<=3.10,>=3.5->ydata-profiling==4.16.1) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "id": "76914731",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "id": "4ef737ea",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "id": "484ffec3",
    "metadata": {},
    "outputs": [
@@ -201,18 +201,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<?, ?it/s]/14 [00:00<00:00, 80.71it/s, Describe variable: ops BT]   \n",
-      "Summarize dataset:  69%|██████▉   | 11/16 [00:00<00:00, 80.71it/s, Calculate auto correlation]c:\\Users\\Luis\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\ydata_profiling\\model\\correlations.py:87: UserWarning: There was an attempt to calculate the auto correlation, but this failed.\n",
-      "To hide this warning, disable the calculation\n",
-      "(using `df.profile_report(correlations={\"auto\": {\"calculate\": False}})`\n",
-      "If this is problematic for your use case, please report this as an issue:\n",
-      "https://github.com/ydataai/ydata-profiling/issues\n",
-      "(include the error message: 'putmask: first argument must be an array')\n",
-      "  warnings.warn(\n",
-      "Summarize dataset: 100%|██████████| 100/100 [00:11<00:00,  8.96it/s, Completed]                 \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:02<00:00,  2.76s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  1.58it/s]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 129.85it/s]\n"
+      "100%|██████████| 9/9 [00:00<?, ?it/s]/14 [00:00<00:00, 118.85it/s, Describe variable: ops BT]   \n",
+      "Summarize dataset: 100%|██████████| 101/101 [00:10<00:00,  9.40it/s, Completed]                    \n",
+      "Generate report structure: 100%|██████████| 1/1 [00:03<00:00,  3.02s/it]\n",
+      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  1.47it/s]\n",
+      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 120.03it/s]\n"
      ]
     },
     {
@@ -228,11 +221,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9/9 [00:00<?, ?it/s]/14 [00:00<00:00, 78.66it/s, Describe variable: ops BT]   \n",
-      "Summarize dataset: 100%|██████████| 99/99 [00:09<00:00, 10.01it/s, Completed]                   \n",
-      "Generate report structure: 100%|██████████| 1/1 [00:02<00:00,  2.66s/it]\n",
-      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  1.60it/s]\n",
-      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 130.04it/s]"
+      "100%|██████████| 9/9 [00:00<?, ?it/s]/14 [00:00<00:00, 56.57it/s, Describe variable: ops BT]   \n",
+      "Summarize dataset: 100%|██████████| 100/100 [00:11<00:00,  8.55it/s, Completed]                   \n",
+      "Generate report structure: 100%|██████████| 1/1 [00:03<00:00,  3.32s/it]\n",
+      "Render HTML: 100%|██████████| 1/1 [00:00<00:00,  1.13it/s]\n",
+      "Export report to file: 100%|██████████| 1/1 [00:00<00:00, 81.40it/s]"
      ]
     },
     {
@@ -264,10 +257,8 @@
     "metric_cols = ['tiempo BF','tiempo DC','tiempo BT']\n",
     "\n",
     "for path in csv_paths:\n",
-    "    # <-- aquí sacamos el nombre de la carpeta contenedora\n",
-    "    parent = os.path.basename( os.path.dirname(path) )\n",
-    "    name   = parent.lower().replace('_code','')  # opcional: limpiamos el sufijo\n",
-    "    \n",
+    "    parent = os.path.basename(os.path.dirname(path))\n",
+    "    name   = parent.lower().replace('_code','')\n",
     "    print(f\"\\n--- Procesando `{name}` ({path}) ---\")\n",
     "    df = pd.read_csv(path, sep=';', encoding='utf-8')\n",
     "\n",
@@ -280,7 +271,7 @@
     "    # Filtrar sólo numéricos\n",
     "    df_num = df.select_dtypes(include=[np.number])\n",
     "\n",
-    "    # Generar el reporte (desactivando χ² en num y cat)\n",
+    "    # Generar el reporte incluyendo matriz de correlación\n",
     "    profile = ProfileReport(\n",
     "        df_num,\n",
     "        title=f\"Reporte_numérico_{name}\",\n",
@@ -289,10 +280,17 @@
     "        vars={\n",
     "            \"num\": { \"chi_squared_threshold\": 0.0 },\n",
     "            \"cat\": { \"chi_squared_threshold\": 0.0 }\n",
+    "        },\n",
+    "        correlations={\n",
+    "            \"pearson\": {\"calculate\": True},\n",
+    "            \"spearman\": {\"calculate\": True},\n",
+    "            \"kendall\": {\"calculate\": False},\n",
+    "            \"phi_k\": {\"calculate\": False},\n",
+    "            \"cramers\": {\"calculate\": False},\n",
+    "            \"auto\": {\"calculate\": False}    # desactivar sólo la autocorrelación\n",
     "        }\n",
     "    )\n",
     "\n",
-    "    # <-- ahora los nombres son distintos: e.g. Report_numeric_npc_sub_digrafh_python\n",
     "    out_file = f\"Report_numeric_{name}.html\"\n",
     "    profile.to_file(out_file)\n",
     "    print(f\"→ Guardado: {out_file}\")\n"
